Spanish translation added 1.3

--- a/ScenarioClaustrofobia.ini
+++ b/ScenarioClaustrofobia.ini
@@ -10,9 +10,14 @@ difficulty=0.8
 lengthmin=120
 lengthmax=180
 image=prisao.jpg
-version=CC-AF-1A-CF-C8-90-74-D6-8B-3D-32-B1-11-97-21-2C-48-04-E3-2B-71-19-CD-24-D8-D0-98-2C-FD-17-0D-DA
+version=48-96-52-12-21-A9-37-10-A6-2F-4A-B4-90-C5-C9-7A-5B-E0-E5-35-1E-64-F6-69-14-11-D9-BC-63-45-21-4D
 name.Portuguese=Claustrofobia
+name.Spanish=Claustrofobia
 synopsys.Portuguese=Você foi capturado por um homem psicótico. Será possível escapar do cativeiro com vida?
+synopsys.Spanish=Has sido capturado por un psicópata. <i>¿Podrás escapar con vida de tu cautiverio?</i>
 description.Portuguese=Este é um cenário de horror e sobrevivência para Mansions of Madness Segunda Edição.\nContém violência (16+).\n\nAs seguintes expansões são obrigatórias para jogá-lo:\nMemórias Reprimidas\nPesadelos Recorrentes\nSantuário do Crepúsculo\n\nVariações serão adicionadas caso você possua as expansões Ruas de Arkhan, Jornadas Macabras e/ou Caminho da Serpente.\n\nÉ possível jogar este cenário com 3 jogadores, contudo ele funcionará melhor com 4 ou 5 jogadores.\nRegras especiais serão utilizadas, conforme instruído pelo aplicativo.\n 
+description.Spanish=Este es un escenario de horror y supervivencia para «Mansiones de la locura», segunda edición. \n\n <b>El escenario incluye contenido violento (+16).</b> \n\n Las siguientes expansiones son obligatorias: \n «Recuerdos reprimidos» \n «Pesadillas recurrentes» \n «El santuario del Crepúsculo» . \n\n Las siguientes expansiones añaden variaciones: \n «Calles de Arkham» \n «Viajes escalofriantes» \n y «La senda de la serpiente». \n\n Se puede jugar este escenario con 3 jugadores, aunque funcionará mejor con 4 o 5 jugadores. \n\n Se usan reglas especiales que serán explicadas en la aplicación a medida que aparezcan. \n
 authors.Portuguese=Cenário e narração:\nLucas M. Carvalho\n\nMusic used from https://www.FesliyanStudios.com
+authors.Spanish=\n Autor: \n Lucas M. Carvalho \n\n Música: \n https://www.FesliyanStudios.com \n\n Traducción al español: \n Vidimus \n
 authors_short.Portuguese=Lucas M. Carvalho
+authors_short.Spanish=Lucas M. Carvalho
