Voiceover fix for Spanish and Polish versions
Fixed sound files for Spanish and Polish version, removing the voiceover.

--- a/ScenarioClaustrofobia.ini
+++ b/ScenarioClaustrofobia.ini
@@ -1,4 +1,4 @@
-﻿[Quest]
+[Quest]
 format=18
 hidden=False
 type=MoM
@@ -10,9 +10,9 @@ difficulty=0.8
 lengthmin=120
 lengthmax=180
 image=prisao.jpg
-version=53-B8-A5-82-40-04-E5-9A-D4-11-74-7F-DE-DB-4D-F3-D9-FB-19-14-99-75-B8-A9-02-C0-A9-9C-6B-65-99-BE
+version=98-20-45-5A-EC-67-D9-22-CC-E3-C6-10-F4-28-33-ED-D7-D8-96-66-D9-8E-19-6E-2E-C7-19-13-73-D4-C2-B0
 name.Portuguese=Claustrofobia
-name.Spanish=Claustrofobia
+name.Spanish=Claustrofobia v1.1
 name.Polish=Klaustrofobia
 synopsys.Portuguese=Você foi capturado por um homem psicótico. Será possível escapar do cativeiro com vida?
 synopsys.Spanish=Has sido capturado por un psicópata. <i>¿Podrás escapar con vida de tu cautiverio?</i>
